--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Teatro Instabile - Novara</title>
   <link rel="stylesheet" href="css/foundation.css">
   <link rel="stylesheet" href="css/app.css">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800' rel='stylesheet' type='text/css'>
 
   <!-- facebook -->
   <meta property="og:description" content="Teatro Instabile - Novara"/>
@@ -74,29 +75,35 @@
 
         <!-- NEWEST -->
         <div id="newest" class="row">
-          <div id="news" class="large-4 medium-4 columns">
-            <img class="float-center" src="img/mobile/scusi_lei.png">
+          <div id="news" class="large-3 medium-3 columns">
+            <img  class="float-center" data-interchange="[img/mobile/scusi_lei.png, small], [img/web/scusi_lei.png, medium]">
           </div>
-          <div class="large-8 columns">
-            <h2 class="font testo-rosso">Scusi lei ucciderebbe mio marito?</h2>
-            <p>Teatro Comunale<br/>
+          <div class="large-9 columns">
+            <h1 class="font testo-rosso">Scusi lei ucciderebbe mio marito?</h1>
+            <p class="newest_size">Teatro Comunale<br/>
               Piazza Cavour 21, Trecate
             </p>
-            <p><strong class="font-grasso">Sabato 20 Febbraio 2016 - ore 21.15</strong></p>
+            <p class="extra-bold-padding">
+              <strong class="extra-bold newest_size">Sabato 20 Febbraio 2016 - ore 21.15</strong>
+            </p>
             <p>Ingresso Libero
             </p>
           </div>
         </div>
 
+        <!-- spacer -->
+        <div class="row grigio 1 column">
+          &nbsp;
+        </div>
 
         <!-- CHI SIAMO -->
         <div id="chi_siamo" class="row">
           <h1 class="font testo-rosso">Chi Siamo</h1>
           <div class="row">
-            <div class="large-6 large-push-6  columns">
-              <img id="chi_siamo_img" class="float-center" src="img/mobile/chi_siamo.png">
+            <div class="large-5 large-push-7  columns">
+              <img id="chi_siamo_img" class="float-center" data-interchange="[img/mobile/chi_siamo.png, small], [img/web/chi_siamo.png, medium]">
             </div>
-            <div class="large-6 large-pull-6 columns">
+            <div class="large-7 large-pull-5 columns">
               <p>Molti di noi si sono conosciuti durante le scuole superiori, attraverso laboratori di teatro. Durante le scuole “fare teatro” sembrava un buon modo per divertirci e stare insieme, ma ben presto ci siamo accorti che questa passione era diventata un vero e proprio interesse che voleva continuare ed essere coltivato.
                 Terminate le scuole, è bastato l’entusiasmo a riunire il gruppo che già recitava nei laboratori scolastici. Non è passato troppo tempo perché fosse pronto il nostro primo spettacolo “Buona la prima?!?”, che va in scena il 17 Novembre 2007 a Novara.
                 Tra alti e bassi, nuovi arrivi e nuovi saluti, copioni e spettacoli si sono moltiplicati e, oggi come allora, il teatro ci appassiona e la voglia di divertirsi su un palcoscenico non è mai passata.
@@ -104,6 +111,8 @@
               </div>
             </div>
           </div>
+
+
 
           <!-- CAROUSEL -->
           <div id="carousel" class="row rosso font ">
@@ -171,42 +180,59 @@
             </ul>
           </div>
 
+          <!-- spacer -->
+          <div class="row grigio 1 column">
+            &nbsp;
+          </div>
+
           <!-- SPETTACOLI -->
           <div id="spettacoli" class="row">
-            <h1 class="font testo-rosso">I Nostri Spettacoli</h1>
+            <h1 class="font testo-rosso">I nostri spettacoli</h1>
             <div class="row">
               <div class="large-4 columns text-center">
-                <img ="spettacolo_past_img" class="float-center" src="img/mobile/salotto.png">
-                <p><strong class="font-grasso">Salotto per donne usate</strong></p>
-                <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini. </p>
-                <p><strong>18 Dicembre 2010</strong></p>
-                <p>Oratorio Sant'Agabio - Novara</p>
-                <p><strong>18 Dicembre 2010</strong></p>
-                <p>Oratorio Sant'Agabio - Novara</p>
-                <p><strong>18 Dicembre 2010</strong></p>
-                <p>Oratorio Sant'Agabio - Novara</p>
+                <img class="spettacolo_past_img" class="float-center" src="img/mobile/salotto.png">
+                <p><strong class="font-grasso titoletti">Salotto per donne usate</strong></p>
+                <div class="testo-spettacoli">
+                  <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini. </p>
+                  <div class="date-spettacoli">
+                    <p><strong>18 Dicembre 2010</strong></p>
+                    <p>Oratorio Sant'Agabio - Novara</p>
+                    <p><strong>18 Dicembre 2010</strong></p>
+                    <p>Oratorio Sant'Agabio - Novara</p>
+                    <p><strong>18 Dicembre 2010</strong></p>
+                    <p>Oratorio Sant'Agabio - Novara</p>
+                  </div>
+                </div>
               </div>
               <div class="large-4 show-for-medium columns text-center">
-                <img ="spettacolo_past_img" class="float-center" src="http://placehold.it/248x247">
-                <p><strong class="font-grasso">Se devi dire una bugia, dilla grossa</strong></p>
-                <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini. </p>
-                <p><strong>18 Dicembre 2010</strong></p>
-                <p>Oratorio Sant'Agabio - Novara</p>
-                <p><strong>18 Dicembre 2010</strong></p>
-                <p>Oratorio Sant'Agabio - Novara</p>
-                <p><strong>18 Dicembre 2010</strong></p>
-                <p>Oratorio Sant'Agabio - Novara</p>
+                <img class="spettacolo_past_img" class="float-center" src="http://placehold.it/248x247">
+                <p><strong class="font-grasso titoletti">Se devi dire una bugia, dilla grossa</strong></p>
+                <div class="testo-spettacoli">
+                  <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini. </p>
+                  <div class="date-spettacoli">
+                    <p><strong>18 Dicembre 2010</strong></p>
+                    <p>Oratorio Sant'Agabio - Novara</p>
+                    <p><strong>18 Dicembre 2010</strong></p>
+                    <p>Oratorio Sant'Agabio - Novara</p>
+                    <p><strong>18 Dicembre 2010</strong></p>
+                    <p>Oratorio Sant'Agabio - Novara</p>
+                  </div>
+                </div>
               </div>
               <div class="large-4 show-for-medium columns text-center">
-                <img ="spettacolo_past_img" class="float-center" src="http://placehold.it/248x247">
-                <p><strong class="font-grasso">Salotto per donne usate</strong></p>
-                <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini. </p>
-                <p><strong>18 Dicembre 2010</strong></p>
-                <p>Oratorio Sant'Agabio - Novara</p>
-                <p><strong>18 Dicembre 2010</strong></p>
-                <p>Oratorio Sant'Agabio - Novara</p>
-                <p><strong>18 Dicembre 2010</strong></p>
-                <p>Oratorio Sant'Agabio - Novara</p>
+                <img class="spettacolo_past_img" class="float-center" src="http://placehold.it/248x247">
+                <p><strong class="font-grasso titoletti">Salotto per donne usate</strong></p>
+                <div class="testo-spettacoli">
+                  <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini. </p>
+                  <div class="date-spettacoli">
+                    <p><strong>18 Dicembre 2010</strong></p>
+                    <p>Oratorio Sant'Agabio - Novara</p>
+                    <p><strong>18 Dicembre 2010</strong></p>
+                    <p>Oratorio Sant'Agabio - Novara</p>
+                    <p><strong>18 Dicembre 2010</strong></p>
+                    <p>Oratorio Sant'Agabio - Novara</p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -224,104 +250,92 @@
                     <div class="small-4 columns">
                       <img data-toggle="animatedModal1" class="float-center margine-bianco" src="img/mobile/art1.png">
                       <div id="animatedModal1" class="reveal" data-reveal data-close-on-click="true"
-                           data-animation-in="fade-in" data-animation-out="fade-out">
-                        <h1 class="font">Dettagli articolo.</h1>
-                        <p class='lead'>Bau bau bau</p>
-                        <img class="float-center margine-bianco" src="img/mobile/art1.png">
-                        <button class="close-button" data-close aria-label="Close reveal" type="button">
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                      </div>
-                    </div>
-                    <div class="small-4 columns">
-                      <img data-toggle="animatedModal2" class="float-center margine-bianco" src="img/mobile/art2.png">
-                      <div id="animatedModal2" class="reveal" data-reveal data-close-on-click="true"
-                           data-animation-in="fade-in" data-animation-out="fade-out">
-                        <h1 class="font">Dettagli articolo.</h1>
-                        <p class='lead'>Bau bau bau</p>
-                        <img class="float-center margine-bianco" src="img/mobile/art2.png">
-                        <button class="close-button" data-close aria-label="Close reveal" type="button">
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                      </div>
-                    </div>
-                    <div class="small-4 columns">
-                      <img data-toggle="animatedModal3" class="float-center margine-bianco" src="http://placehold.it/94x93">
-                      <div id="animatedModal3" class="reveal" data-reveal data-close-on-click="true"
-                           data-animation-in="fade-in" data-animation-out="fade-out">
-                        <h1 class="font">Dettagli articolo.</h1>
-                        <p class='lead'>Bau bau bau</p>
-                        <img class="float-center margine-bianco" src="img/mobile/art2.png">
-                        <button class="close-button" data-close aria-label="Close reveal" type="button">
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                  </div>
-                </li>
-                <li class="orbit-slide">
-                  <div class="row">
-                    <div class="small-4 columns">
-                      <img class="float-center margine-bianco" src="img/mobile/art2.png">
-                    </div>
-                    <div class="small-4 columns">
+                      data-animation-in="fade-in" data-animation-out="fade-out">
+                      <h1 class="font">Dettagli articolo.</h1>
+                      <p class='lead'>Bau bau bau</p>
                       <img class="float-center margine-bianco" src="img/mobile/art1.png">
-                    </div>
-                    <div class="small-4 columns">
-                      <img class="float-center margine-bianco" src="http://placehold.it/94x93">
+                      <button class="close-button" data-close aria-label="Close reveal" type="button">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
                     </div>
                   </div>
-                </li>
-              </ul>
-            </div>
-
-          </div>
-
-          <!-- white separate, keep it -->
-          <div>&nbsp;</div>
-          <!-- CONTATTACI -->
-          <div id="contattaci" class="row rosso">
-            <h1 class="font text-center testo-bianco">Contattaci</h1>
-            <div class="row">
-              <div class="small-4 medium-2 small-centered columns">
-                <a href="mailto:teatroinstabile.no@gmail.com"><img class="float-left" src="img/mobile/email.png"></a>
-                <a href="https://www.facebook.com/TeatroInstabileNovara/"><img class="float-right" src="img/mobile/facebook.png"></a>
+                  <div class="small-4 columns">
+                    <img data-toggle="animatedModal2" class="float-center margine-bianco" src="img/mobile/art2.png">
+                    <div id="animatedModal2" class="reveal" data-reveal data-close-on-click="true"
+                    data-animation-in="fade-in" data-animation-out="fade-out">
+                    <h1 class="font">Dettagli articolo.</h1>
+                    <p class='lead'>Bau bau bau</p>
+                    <img class="float-center margine-bianco" src="img/mobile/art2.png">
+                    <button class="close-button" data-close aria-label="Close reveal" type="button">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                </div>
+                <div class="small-4 columns">
+                  <img data-toggle="animatedModal3" class="float-center margine-bianco" src="http://placehold.it/94x93">
+                  <div id="animatedModal3" class="reveal" data-reveal data-close-on-click="true"
+                  data-animation-in="fade-in" data-animation-out="fade-out">
+                  <h1 class="font">Dettagli articolo.</h1>
+                  <p class='lead'>Bau bau bau</p>
+                  <img class="float-center margine-bianco" src="img/mobile/art2.png">
+                  <button class="close-button" data-close aria-label="Close reveal" type="button">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
               </div>
-            </div>
-            <div>&nbsp;</div>
-          </div>
+            </li>
+            <li class="orbit-slide">
+              <div class="row">
+                <div class="small-4 columns">
+                  <img class="float-center margine-bianco" src="img/mobile/art2.png">
+                </div>
+                <div class="small-4 columns">
+                  <img class="float-center margine-bianco" src="img/mobile/art1.png">
+                </div>
+                <div class="small-4 columns">
+                  <img class="float-center margine-bianco" src="http://placehold.it/94x93">
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
 
       </div>
+
+      <!-- white separate, keep it -->
+      <div>&nbsp;</div>
+      <!-- CONTATTACI -->
+      <div id="contattaci" class="row rosso">
+        <h1 class="font text-center testo-bianco">Contattaci</h1>
+        <div class="row">
+          <div class="small-4 medium-2 small-centered columns">
+            <a href="mailto:teatroinstabile.no@gmail.com"><img class="float-left" src="img/mobile/email.png"></a>
+            <a href="https://www.facebook.com/TeatroInstabileNovara/"><img class="float-right" src="img/mobile/facebook.png"></a>
+          </div>
+        </div>
+        <div>&nbsp;</div>
+      </div>
     </div>
 
-    <script type="text/javascript">
-      WebFontConfig = {
-        google: { families: [ 'Open+Sans::latin' ] }
-      };
-      (function() {
-        var wf = document.createElement('script');
-        wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-        wf.type = 'text/javascript';
-        wf.async = 'true';
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(wf, s);
-      })(); </script>
-    <script type="text/javascript">
-      WebFontConfig = {
-        google: { families: [ 'EB+Garamond::latin' ] }
-      };
-      (function() {
-        var wf = document.createElement('script');
-        wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-        wf.type = 'text/javascript';
-        wf.async = 'true';
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(wf, s);
-      })(); </script>
+  </div>
+</div>
 
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/vendor/what-input.js"></script>
-    <script src="js/vendor/foundation.js"></script>
-    <script src="js/app.js"></script>
-  </body>
-  </html>
+<script type="text/javascript">
+WebFontConfig = {
+  google: { families: [ 'EB+Garamond::latin' ] }
+};
+(function() {
+  var wf = document.createElement('script');
+  wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+  wf.type = 'text/javascript';
+  wf.async = 'true';
+  var s = document.getElementsByTagName('script')[0];
+  s.parentNode.insertBefore(wf, s);
+})(); </script>
+
+<script src="js/vendor/jquery.js"></script>
+<script src="js/vendor/what-input.js"></script>
+<script src="js/vendor/foundation.js"></script>
+<script src="js/app.js"></script>
+</body>
+</html>
